"Updated the JurassicAnimalFactory file"